/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

import "GlobalngeNB-ID.proto";

package e2ctypes;

message GlobalE2node_ng_eNB_ID_t {
    GlobalngeNB_ID_t	 global_ng_eNB_ID = 1;
}